[gd_scene load_steps=8 format=3 uid="uid://ds0yesflrde2y"]

[ext_resource type="Texture2D" uid="uid://cbhwoh7l5ro1q" path="res://Juan Hernández/misc/d91qfhx-8d6b825c-c0b5-4325-96fb-a05671ece9e8.png" id="1_yuokw"]
[ext_resource type="Script" path="res://ring.gd" id="2_coca1"]
[ext_resource type="AudioStream" uid="uid://dmatfsurwc38p" path="res://Juan Hernández/misc/26f8b9_sonic_ring_sound_effect.mp3" id="3_coca1"]

[sub_resource type="Animation" id="Animation_2gnx4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4gxsa"]
resource_name = "circle"
length = 1.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.166667, 0.3, 0.433333, 0.566667, 0.7, 0.833333, 0.966667, 1.1, 1.23333, 1.36667, 1.5, 1.63333, 1.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 10, 12, 14, 15, 17, 18, 20, 22, 24, 26, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r57ho"]
_data = {
&"RESET": SubResource("Animation_2gnx4"),
&"circle": SubResource("Animation_4gxsa")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_coca1"]
radius = 5.09902

[node name="Ring" type="Area2D"]
texture_filter = 1
script = ExtResource("2_coca1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.179688, 0.179688)
texture = ExtResource("1_yuokw")
hframes = 8
vframes = 4

[node name="Ring_Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r57ho")
}

[node name="ring_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_coca1")
volume_db = -16.023

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_coca1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
